# lora_diffusion

./: .gitignore  .pre-commit-config.yaml  README.md  infer_run.sh  inference.py  pyproject.toml  train.py  train_run.sh
.dvc/: .gitignore  config
src/configs/: persongen_inference_lora.yaml  persongen_train_lora.yaml  persongen_train_lora_step_2.yaml
src/configs/data_source/: main_source.yaml  main_source_step_2.yaml
src/configs/dataloaders/: all_dataloaders.yaml
src/configs/datasets/: all_datasets.yaml  all_datasets_step_2.yaml
src/configs/dvc/: dvc.yaml
src/configs/inferencer/: lora.yaml
src/configs/lr_scheduler/: constant.yaml  custom_linear.yaml
src/configs/metrics/: all_metrics.yaml
src/configs/model/: sdxl_lora.yaml
src/configs/pipeline/: sdxl15.yaml
src/configs/trainer/: lora.yaml  lora_step_2.yaml
src/configs/transforms/: only_instance.yaml
src/configs/writer/: clearml.yaml  clearml_inference.yaml  console.yaml  wandb.yaml
src/data/: .gitignore  data_manager.py  my_object_512.dvc
src/datasets/: base_dataset.py  collate.py  custom_dreambooth.py  custom_dreambooth_step_2.py  data_utils.py
src/lightning/: lora_module.py
src/logger/: clearml.py  console.py  logger.py  utils.py  wandb.py
src/loss/: diffusion_loss.py
src/lr_schedulers/: lr_schedulers.py
src/metrics/: aligner.py  base_metric.py  dino.py  id_sim_metric.py  text_sim.py  tracker.py
src/pipelines/: sdxl.py
src/trainer/: base_trainer.py  inferencer.py  lora_trainers.py
src/transforms/: pad_resize.py
src/utils/: id_utils.py  init_utils.py  model_utils.py
(+2 files in other folders)
